tests/base/invalid/While_CompileFail_2.whiley


void ::main(System.Console sys):
    i=0
    r=0
    while i < |args| where j > 0:
        r = r + |args[i]|
    debug Any.toString(r)
